--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ui",
   "version": "0.0.0",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "release": "changeset version",
     "build:cli": "nx build shadcn-ng"
