--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -14,6 +14,7 @@
     "@analogjs/astro-angular": "^1.6.3",
     "@angular-devkit/build-angular": "^18.1.1",
     "@angular/animations": "^18.1.1",
+    "@angular/cdk": "^18.1.1",
     "@angular/common": "^18.1.1",
     "@angular/compiler": "^18.1.1",
     "@angular/compiler-cli": "^18.1.1",
@@ -26,17 +27,20 @@
     "@astrojs/starlight": "^0.25.2",
     "@astrojs/starlight-tailwind": "^2.0.3",
     "@astrojs/tailwind": "^5.1.0",
+    "@radix-ng/primitives": "^0.8.2",
     "astro": "^4.12.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lodash.template": "^4.5.0",
     "rxjs": "^7.8.1",
     "sharp": "^0.32.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.4",
     "tslib": "^2.6.3",
     "typescript": "^5.5.3",
-    "zone.js": "^0.14.8",
-    "@types/lodash.template": "^4.5.1",
-    "lodash.template": "^4.5.0"
+    "zone.js": "^0.14.8"
+  },
+  "devDependencies": {
+    "@types/lodash.template": "^4.5.1"
   }
 }
