--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -32,6 +32,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lodash.template": "^4.5.0",
+    "lucide-angular": "^0.414.0",
     "rxjs": "^7.8.1",
     "sharp": "^0.32.5",
     "tailwind-merge": "^2.4.0",
