--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -14,7 +14,7 @@
     "@analogjs/astro-angular": "^1.6.4",
     "@angular-devkit/build-angular": "^18.1.2",
     "@angular/animations": "^18.1.2",
-    "@angular/cdk": "^18.1.1",
+    "@angular/cdk": "^18.1.2",
     "@angular/common": "^18.1.2",
     "@angular/compiler": "^18.1.2",
     "@angular/compiler-cli": "^18.1.2",
@@ -27,13 +27,14 @@
     "@astrojs/starlight": "^0.25.2",
     "@astrojs/starlight-tailwind": "^2.0.3",
     "@astrojs/tailwind": "^5.1.0",
+    "@ng-icons/core": "^29.0.0",
+    "@ng-icons/radix-icons": "^29.0.0",
     "@pagefind/default-ui": "^1.1.0",
     "@radix-ng/primitives": "^0.8.2",
     "astro": "^4.12.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lodash.template": "^4.5.0",
-    "lucide-angular": "^0.414.0",
     "rxjs": "^7.8.1",
     "sharp": "^0.32.5",
     "tailwind-merge": "^2.4.0",
