--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -28,6 +28,7 @@
     "@astrojs/starlight-tailwind": "^2.0.3",
     "@astrojs/tailwind": "^5.1.0",
     "@ng-icons/core": "^29.0.0",
+    "@ng-icons/lucide": "^29.0.0",
     "@ng-icons/radix-icons": "^29.0.0",
     "@pagefind/default-ui": "^1.1.0",
     "@radix-ng/primitives": "^0.8.2",
@@ -37,6 +38,7 @@
     "lodash.template": "^4.5.0",
     "rxjs": "^7.8.1",
     "sharp": "^0.32.5",
+    "simple-stack-query": "^0.1.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.4",
     "tslib": "^2.6.3",
