--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -33,6 +33,7 @@
     "@pagefind/default-ui": "^1.1.0",
     "@radix-ng/primitives": "^0.8.2",
     "astro": "^4.12.2",
+    "astro-auto-import": "^0.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lodash.template": "^4.5.0",
