--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -36,7 +36,10 @@
     "astro-auto-import": "^0.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "hast": "^1.0.0",
+    "hast-util-select": "^6.0.2",
     "lodash.template": "^4.5.0",
+    "rehype": "^13.0.1",
     "rxjs": "^7.8.1",
     "sharp": "^0.32.5",
     "simple-stack-query": "^0.1.1",
@@ -44,9 +47,12 @@
     "tailwindcss": "^3.4.4",
     "tslib": "^2.6.3",
     "typescript": "^5.5.3",
+    "unist-util-visit": "^5.0.0",
+    "vfile": "^6.0.2",
     "zone.js": "^0.14.8"
   },
   "devDependencies": {
+    "@types/hast": "^3.0.4",
     "@types/lodash.template": "^4.5.1",
     "prettier": "^3.3.3"
   }
