--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -19,6 +19,7 @@
     "@angular/compiler": "^18.2.0",
     "@angular/compiler-cli": "^18.2.0",
     "@angular/core": "^18.2.0",
+    "@angular/forms": "^18.2.0",
     "@angular/language-service": "^18.2.0",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
