--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -12,18 +12,18 @@
   },
   "dependencies": {
     "@analogjs/astro-angular": "^1.7.2",
-    "@angular-devkit/build-angular": "^18.2.0",
-    "@angular/animations": "^18.2.0",
-    "@angular/cdk": "^18.2.0",
-    "@angular/common": "^18.2.0",
-    "@angular/compiler": "^18.2.0",
-    "@angular/compiler-cli": "^18.2.0",
-    "@angular/core": "^18.2.0",
-    "@angular/forms": "^18.2.0",
-    "@angular/language-service": "^18.2.0",
-    "@angular/platform-browser": "^18.2.0",
-    "@angular/platform-browser-dynamic": "^18.2.0",
-    "@angular/platform-server": "^18.2.0",
+    "@angular-devkit/build-angular": "^18.2.1",
+    "@angular/animations": "^18.2.1",
+    "@angular/cdk": "^18.2.1",
+    "@angular/common": "^18.2.1",
+    "@angular/compiler": "^18.2.1",
+    "@angular/compiler-cli": "^18.2.1",
+    "@angular/core": "^18.2.1",
+    "@angular/forms": "^18.2.1",
+    "@angular/language-service": "^18.2.1",
+    "@angular/platform-browser": "^18.2.1",
+    "@angular/platform-browser-dynamic": "^18.2.1",
+    "@angular/platform-server": "^18.2.1",
     "@astrojs/check": "^0.9.3",
     "@astrojs/starlight": "^0.26.1",
     "@astrojs/starlight-tailwind": "^2.0.3",
@@ -45,11 +45,11 @@
     "sharp": "^0.32.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.4",
-    "tslib": "^2.6.3",
+    "tslib": "^2.7.0",
     "typescript": "^5.5.3",
     "unist-util-visit": "^5.0.0",
     "vfile": "^6.0.2",
-    "zone.js": "^0.14.10"
+    "zone.js": "~0.14.10"
   },
   "devDependencies": {
     "@types/hast": "^3.0.4",
