--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   "dependencies": {
     "@antfu/ni": "^0.23.0",
     "chalk": "5.2.0",
-    "commander": "^10.0.0",
+    "citty": "^0.1.6",
     "cosmiconfig": "^8.1.3",
     "diff": "^5.1.0",
     "execa": "^7.0.0",
@@ -83,7 +83,6 @@
     "lint-staged": "^15.2.10",
     "pnpm": "^9.9.0",
     "simple-git-hooks": "^2.11.1",
-    "type-fest": "^3.8.0",
     "typescript": "^5.5.4",
     "unbuild": "^2.0.0",
     "vite": "^5.4.3",
