--- a/package.json
+++ b/package.json
@@ -53,7 +53,6 @@
   },
   "dependencies": {
     "@antfu/ni": "^0.23.0",
-    "chalk": "5.2.0",
     "citty": "^0.1.6",
     "cosmiconfig": "^8.1.3",
     "diff": "^5.1.0",
@@ -64,6 +63,7 @@
     "lodash.template": "^4.5.0",
     "node-fetch": "^3.3.0",
     "ora": "^6.1.2",
+    "picocolors": "^1.1.0",
     "prompts": "^2.4.2",
     "ts-morph": "^18.0.0",
     "tsconfig-paths": "^4.2.0",
