--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "@antfu/ni": "^0.23.0",
     "citty": "^0.1.6",
+    "consola": "^3.2.3",
     "cosmiconfig": "^8.1.3",
     "diff": "^5.1.0",
     "execa": "^7.0.0",
@@ -64,7 +65,6 @@
     "node-fetch": "^3.3.0",
     "ora": "^6.1.2",
     "picocolors": "^1.1.0",
-    "prompts": "^2.4.2",
     "ts-morph": "^18.0.0",
     "tsconfig-paths": "^4.2.0",
     "zod": "^3.20.2"
