--- a/docs/package.json
+++ b/docs/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "playground",
+  "name": "docs",
   "type": "module",
   "version": "0.0.1",
+  "private": true,
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
