--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   ],
   "scripts": {
     "build": "unbuild",
-    "dev": "cross-env DEBUG=shadcn-ng:* esno src/cli.ts",
+    "dev": "cross-env DEBUG=shadcn-ng esno src/cli.ts",
     "lint": "eslint .",
     "prepare": "simple-git-hooks",
     "prepublishOnly": "nr build",
@@ -48,7 +48,7 @@
   "dependencies": {
     "@antfu/ni": "^0.23.0",
     "astro-eslint-parser": "^1.0.3",
-    "citty": "^0.1.6",
+    "commander": "^12.1.0",
     "consola": "^3.2.3",
     "cosmiconfig": "^8.1.3",
     "diff": "^5.1.0",
