--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "@antfu/ni": "^0.23.0",
+    "@clack/prompts": "^0.7.0",
     "astro-eslint-parser": "^1.0.3",
     "commander": "^12.1.0",
     "consola": "^3.2.3",
