--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
   ],
   "scripts": {
     "build": "unbuild",
-    "dev": "cross-env DEBUG=shadcn-ng esno src/cli.ts",
+    "dev": "cross-env DEBUG=shadcn-ng REGISTRY_URL=http://localhost:4321/r esno src/cli.ts",
+    "docs": "nr -C docs dev",
+    "docs:build": "nr -C docs build",
     "lint": "eslint .",
     "prepare": "simple-git-hooks",
     "prepublishOnly": "nr build",
@@ -46,12 +48,14 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@antfu/install-pkg": "^0.4.1",
     "@antfu/ni": "^0.23.0",
     "@clack/prompts": "^0.7.0",
     "astro-eslint-parser": "^1.0.3",
     "commander": "^12.1.0",
     "consola": "^3.2.3",
     "cosmiconfig": "^8.1.3",
+    "deepmerge": "^4.3.1",
     "diff": "^5.1.0",
     "eslint-plugin-astro": "^1.2.4",
     "execa": "^7.0.0",
@@ -62,8 +66,10 @@
     "node-fetch": "^3.3.0",
     "ora": "^6.1.2",
     "picocolors": "^1.1.0",
+    "stringify-object": "^5.0.0",
     "ts-morph": "^18.0.0",
     "tsconfig-paths": "^4.2.0",
+    "unconfig": "^0.6.0",
     "zod": "^3.20.2"
   },
   "devDependencies": {
@@ -74,6 +80,7 @@
     "@types/fs-extra": "^11.0.1",
     "@types/lodash.template": "^4.5.1",
     "@types/node": "^22.5.4",
+    "@types/stringify-object": "^4.0.5",
     "bumpp": "^9.5.2",
     "cross-env": "^7.0.3",
     "debug": "^4.3.7",
@@ -81,7 +88,9 @@
     "esno": "^4.7.0",
     "lint-staged": "^15.2.10",
     "pnpm": "^9.9.0",
+    "postcss": "^8.4.47",
     "simple-git-hooks": "^2.11.1",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5.5.4",
     "unbuild": "^2.0.0",
     "vite": "^5.4.3",
