--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^3.3.2",
     "@antfu/utils": "^0.7.10",
+    "@prettier/plugin-xml": "^3.4.1",
     "@types/debug": "^4.1.12",
     "@types/diff": "^5.0.3",
     "@types/fs-extra": "^11.0.1",
@@ -85,10 +86,12 @@
     "cross-env": "^7.0.3",
     "debug": "^4.3.7",
     "eslint": "^9.9.1",
+    "eslint-plugin-format": "^0.1.2",
     "esno": "^4.7.0",
     "lint-staged": "^15.2.10",
     "pnpm": "^9.9.0",
     "postcss": "^8.4.47",
+    "prettier-plugin-astro": "^0.14.1",
     "simple-git-hooks": "^2.11.1",
     "tailwindcss": "^3.4.13",
     "typescript": "^5.5.4",
