--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   ],
   "scripts": {
     "build": "unbuild",
-    "dev": "cross-env DEBUG=shadcn-ng REGISTRY_URL=http://localhost:4321/r esno src/cli.ts",
+    "dev": "cross-env REGISTRY_URL=http://localhost:4321/r esno src/cli.ts",
     "docs": "nr -C docs dev",
     "docs:build": "nr -C docs build",
     "lint": "eslint .",
@@ -53,18 +53,13 @@
     "@clack/prompts": "^0.7.0",
     "astro-eslint-parser": "^1.0.3",
     "commander": "^12.1.0",
-    "consola": "^3.2.3",
-    "cosmiconfig": "^8.1.3",
     "deepmerge": "^4.3.1",
     "diff": "^5.1.0",
     "eslint-plugin-astro": "^1.2.4",
     "execa": "^7.0.0",
     "fast-glob": "^3.3.2",
-    "fs-extra": "^11.1.0",
     "https-proxy-agent": "^6.2.0",
-    "lodash.template": "^4.5.0",
     "node-fetch": "^3.3.0",
-    "ora": "^6.1.2",
     "picocolors": "^1.1.0",
     "stringify-object": "^5.0.0",
     "ts-morph": "^18.0.0",
@@ -74,17 +69,12 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.3.2",
-    "@antfu/utils": "^0.7.10",
     "@prettier/plugin-xml": "^3.4.1",
-    "@types/debug": "^4.1.12",
     "@types/diff": "^5.0.3",
-    "@types/fs-extra": "^11.0.1",
-    "@types/lodash.template": "^4.5.1",
     "@types/node": "^22.5.4",
     "@types/stringify-object": "^4.0.5",
     "bumpp": "^9.5.2",
     "cross-env": "^7.0.3",
-    "debug": "^4.3.7",
     "eslint": "^9.9.1",
     "eslint-plugin-format": "^0.1.2",
     "esno": "^4.7.0",
