--- a/docs/package.json
+++ b/docs/package.json
@@ -29,6 +29,7 @@
     "astro": "^4.16.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "ngx-sonner": "^2.0.2",
     "rxjs": "^7.8.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.13",
