--- a/docs/package.json
+++ b/docs/package.json
@@ -26,15 +26,21 @@
     "@ng-icons/lucide": "^29.5.0",
     "@ng-icons/radix-icons": "^29.5.0",
     "@radix-ng/primitives": "^0.15.0",
+    "@shikijs/compat": "^1.22.1",
     "astro": "^4.16.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "ngx-sonner": "^2.0.2",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.14.0",
+    "rehype-slug": "^6.0.0",
+    "remark-code-import": "^1.2.0",
     "rxjs": "^7.8.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "^3.4.13",
     "tailwindcss-animate": "^1.0.7",
     "tslib": "^2.8.0",
+    "unist-builder": "3.0.0",
     "unist-util-visit": "^5.0.0",
     "zone.js": "~0.14.10"
   },
@@ -50,6 +56,8 @@
     "@shikijs/transformers": "^1.20.0",
     "@types/lodash.template": "^4.5.3",
     "lodash.template": "^4.5.0",
+    "mdast-util-toc": "^7.1.0",
+    "remark": "^15.0.1",
     "typescript": "~5.5.0"
   }
 }
