--- a/docs/package.json
+++ b/docs/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "^18.2.9",
     "@angular/core": "^18.2.9",
     "@angular/forms": "^18.2.9",
+    "@astrojs/alpinejs": "^0.4.0",
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^3.1.8",
     "@astrojs/sitemap": "^3.2.1",
@@ -27,6 +28,8 @@
     "@ng-icons/radix-icons": "^29.5.0",
     "@radix-ng/primitives": "^0.15.0",
     "@shikijs/compat": "^1.22.1",
+    "@types/alpinejs": "^3.13.10",
+    "alpinejs": "^3.14.3",
     "astro": "^4.16.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
