--- a/package.json
+++ b/package.json
@@ -68,14 +68,14 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.3.2",
+    "@adrianub/eslint-config": "^0.0.3",
     "@prettier/plugin-xml": "^3.4.1",
     "@types/diff": "^5.0.3",
     "@types/node": "^22.5.4",
     "@types/stringify-object": "^4.0.5",
     "bumpp": "^9.5.2",
     "cross-env": "^7.0.3",
-    "eslint": "^9.9.1",
+    "eslint": "^9.10.0",
     "eslint-plugin-format": "^0.1.2",
     "esno": "^4.7.0",
     "lint-staged": "^15.2.10",
