--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   ],
   "sideEffects": false,
   "exports": {
-    ".": "./dist/index.mjs"
+    ".": "./dist/index.mjs",
+    "./registry": "./dist/registry.mjs"
   },
   "main": "dist/index.mjs",
   "module": "dist/index.mjs",
@@ -54,6 +55,13 @@
     "test": "vitest",
     "typecheck": "tsc --noEmit",
     "prepare": "simple-git-hooks"
+  },
+  "dependencies": {
+    "@clack/prompts": "^0.9.1",
+    "deepmerge": "^4.3.1",
+    "https-proxy-agent": "^7.0.6",
+    "node-fetch": "^3.3.2",
+    "valibot": "1.0.0-beta.14"
   },
   "devDependencies": {
     "@adrianub/eslint-config": "^0.1.0",
