--- a/docs/package.json
+++ b/docs/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@astrojs/starlight": "^0.31.1",
+    "@valibot/to-json-schema": "1.0.0-beta.5",
     "astro": "^5.1.5",
+    "shadcn-ng": "workspace:*",
     "sharp": "^0.32.5"
   }
 }
