feat: add components when init project

--- a/package.json
+++ b/package.json
@@ -68,7 +68,11 @@
     "node-fetch": "^3.3.2",
     "package-manager-detector": "^0.2.9",
     "picocolors": "^1.1.1",
+    "postcss": "^8.5.1",
+    "stringify-object": "^5.0.0",
+    "tailwindcss": "^4.0.3",
     "tinyexec": "^0.3.2",
+    "ts-morph": "^25.0.0",
     "tsconfck": "^3.1.4",
     "tsconfig-paths": "^4.2.0",
     "unconfig": "^0.6.1",
@@ -78,6 +82,7 @@
     "@adrianub/eslint-config": "^0.1.0",
     "@antfu/ni": "^23.3.1",
     "@types/node": "^22.10.6",
+    "@types/stringify-object": "^4.0.5",
     "bumpp": "^9.10.1",
     "eslint": "^9.18.0",
     "lint-staged": "^15.3.0",
