--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@clack/prompts": "^0.9.1",
     "commander": "^13.1.0",
     "deepmerge": "^4.3.1",
+    "diff": "^7.0.0",
     "fast-glob": "^3.3.3",
     "https-proxy-agent": "^7.0.6",
     "local-pkg": "^1.0.0",
@@ -81,6 +82,7 @@
   "devDependencies": {
     "@adrianub/eslint-config": "^0.1.0",
     "@antfu/ni": "^23.3.1",
+    "@types/diff": "^7.0.1",
     "@types/node": "^22.10.6",
     "@types/stringify-object": "^4.0.5",
     "bumpp": "^9.10.1",
