--- a/package.json
+++ b/package.json
@@ -52,10 +52,13 @@
     "prepublishOnly": "nr build",
     "release": "bumpp && pnpm publish",
     "start": "tsx src/index.ts",
-    "start:cli": "tsx src/cli.ts",
+    "start:cli": "cross-env REGISTRY_URL=http://localhost:4321/r tsx src/cli.ts",
     "test": "vitest",
     "typecheck": "tsc --noEmit",
-    "prepare": "simple-git-hooks"
+    "prepare": "simple-git-hooks",
+    "docs": "nr -C docs dev",
+    "predocs:build": "nr build",
+    "docs:build": "nr -C docs build"
   },
   "dependencies": {
     "@antfu/install-pkg": "^1.0.0",
@@ -86,6 +89,7 @@
     "@types/node": "^22.10.6",
     "@types/stringify-object": "^4.0.5",
     "bumpp": "^9.10.1",
+    "cross-env": "^7.0.3",
     "eslint": "^9.18.0",
     "lint-staged": "^15.3.0",
     "pnpm": "^9.15.4",
