docs: add JSON schema generation endpoints using @valibot/to-json-schema

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -32,6 +32,7 @@
     "@radix-ng/primitives": "^0.29.0",
     "@shikijs/compat": "^2.2.0",
     "@types/alpinejs": "^3.13.11",
+    "@valibot/to-json-schema": "1.0.0-beta.5",
     "alpinejs": "^3.14.8",
     "astro": "^5.2.1",
     "class-variance-authority": "^0.7.1",
@@ -42,6 +43,7 @@
     "rehype-slug": "^6.0.0",
     "remark-code-import": "^1.2.0",
     "rxjs": "^7.8.1",
+    "shadcn-ng": "workspace:*",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
