docs: replace @shikijs/compat with shiki for syntax highlighting

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -30,7 +30,6 @@
     "@ng-icons/lucide": "^30.2.0",
     "@ng-icons/radix-icons": "^30.2.0",
     "@radix-ng/primitives": "^0.29.0",
-    "@shikijs/compat": "^2.2.0",
     "@types/alpinejs": "^3.13.11",
     "@valibot/to-json-schema": "1.0.0-beta.5",
     "alpinejs": "^3.14.8",
@@ -44,6 +43,7 @@
     "remark-code-import": "^1.2.0",
     "rxjs": "^7.8.1",
     "shadcn-ng": "workspace:*",
+    "shiki": "^2.3.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^3.4.14",
     "tailwindcss-animate": "^1.0.7",
