docs: remove shadcn-ng dependency and update paths in tsconfig

--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -5,6 +5,12 @@
     "paths": {
       "@/*": [
         "src/*"
+      ],
+      "shadcn-ng": [
+        "../../src/index.ts"
+      ],
+      "shadcn-ng/registry": [
+        "../../src/registry.ts"
       ]
     },
     "plugins": [
