--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -1,16 +1,20 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
     "target": "ES2022",
-    "lib": ["ES2022", "dom"],
+    "lib": [
+      "ES2022",
+      "dom"
+    ],
     "useDefineForClassFields": false,
     "experimentalDecorators": true,
     "baseUrl": "./",
     "module": "ES2022",
     "moduleResolution": "bundler",
     "paths": {
-      "~/*": ["src/app/*"]
+      "~/*": [
+        "src/app/*"
+      ]
     },
     "strict": true,
     "noFallthroughCasesInSwitch": true,
