chore: update font dependencies to use variable fonts

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -24,8 +24,8 @@
     "@astrojs/sitemap": "^3.3.0",
     "@astrojs/tailwind": "^6.0.2",
     "@astrojs/ts-plugin": "^1.10.4",
-    "@fontsource/geist-mono": "^5.1.1",
-    "@fontsource/geist-sans": "^5.1.0",
+    "@fontsource-variable/geist": "^5.2.5",
+    "@fontsource-variable/geist-mono": "^5.2.5",
     "@ng-icons/core": "^30.2.0",
     "@ng-icons/lucide": "^30.2.0",
     "@ng-icons/radix-icons": "^30.2.0",
