--- a/package.json
+++ b/package.json
@@ -85,16 +85,20 @@
     "valibot": "1.0.0-beta.14"
   },
   "devDependencies": {
-    "@adrianub/eslint-config": "^0.1.0",
+    "@antfu/eslint-config": "^4.12.0",
     "@antfu/ni": "^23.3.1",
     "@types/diff": "^7.0.1",
     "@types/node": "^22.10.6",
     "@types/stringify-object": "^4.0.5",
+    "astro-eslint-parser": "^1.2.2",
     "bumpp": "^10.0.3",
     "cross-env": "^7.0.3",
     "eslint": "^9.18.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "eslint-plugin-format": "^1.0.1",
     "lint-staged": "^15.3.0",
     "pnpm": "^9.15.4",
+    "prettier-plugin-astro": "^0.14.1",
     "simple-git-hooks": "^2.11.1",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
