--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "tsconfck": "^3.1.4",
     "tsconfig-paths": "^4.2.0",
     "unconfig": "^0.6.1",
-    "valibot": "1.0.0-beta.14"
+    "valibot": "1.0.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.12.0",
@@ -93,7 +93,7 @@
     "astro-eslint-parser": "^1.2.2",
     "bumpp": "^10.0.3",
     "cross-env": "^7.0.3",
-    "eslint": "^9.18.0",
+    "eslint": "^9.22.0",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-format": "^1.0.1",
     "lint-staged": "^15.3.0",
