chore: update pnpm workspace dependencies and add new packages to catalog

--- a/package.json
+++ b/package.json
@@ -63,48 +63,48 @@
     "v4:registry:build": "nr -C apps/v4 registry:build"
   },
   "dependencies": {
-    "@antfu/install-pkg": "^1.0.0",
-    "@clack/prompts": "^0.9.1",
-    "commander": "^13.1.0",
-    "deepmerge": "^4.3.1",
-    "diff": "^7.0.0",
-    "fast-glob": "^3.3.3",
-    "https-proxy-agent": "^7.0.6",
-    "local-pkg": "^1.0.0",
-    "node-fetch": "^3.3.2",
-    "package-manager-detector": "^0.2.9",
-    "picocolors": "^1.1.1",
-    "postcss": "^8.5.1",
-    "stringify-object": "^5.0.0",
-    "tailwindcss": "^4.0.3",
-    "tinyexec": "^0.3.2",
-    "ts-morph": "^25.0.0",
-    "tsconfck": "^3.1.4",
-    "tsconfig-paths": "^4.2.0",
-    "unconfig": "^0.6.1",
-    "valibot": "1.0.0"
+    "@antfu/install-pkg": "catalog:",
+    "@clack/prompts": "catalog:",
+    "commander": "catalog:",
+    "deepmerge": "catalog:",
+    "diff": "catalog:",
+    "fast-glob": "catalog:",
+    "https-proxy-agent": "catalog:",
+    "local-pkg": "catalog:",
+    "node-fetch": "catalog:",
+    "package-manager-detector": "catalog:",
+    "picocolors": "catalog:",
+    "postcss": "catalog:",
+    "stringify-object": "catalog:",
+    "tailwindcss": "catalog:",
+    "tinyexec": "catalog:",
+    "ts-morph": "catalog:",
+    "tsconfck": "catalog:",
+    "tsconfig-paths": "catalog:",
+    "unconfig": "catalog:",
+    "valibot": "catalog:"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.12.0",
-    "@antfu/ni": "^23.3.1",
-    "@types/diff": "^7.0.1",
-    "@types/node": "^22.10.6",
-    "@types/stringify-object": "^4.0.5",
-    "astro-eslint-parser": "^1.2.2",
-    "bumpp": "^10.0.3",
-    "cross-env": "^7.0.3",
-    "eslint": "^9.22.0",
-    "eslint-plugin-astro": "^1.3.1",
-    "eslint-plugin-format": "^1.0.1",
-    "lint-staged": "^15.3.0",
-    "pnpm": "^9.15.4",
-    "prettier-plugin-astro": "^0.14.1",
-    "simple-git-hooks": "^2.11.1",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.3",
-    "unbuild": "^3.3.1",
-    "vite": "^6.0.7",
-    "vitest": "^2.1.8"
+    "@antfu/eslint-config": "catalog:",
+    "@antfu/ni": "catalog:",
+    "@types/diff": "catalog:",
+    "@types/node": "catalog:",
+    "@types/stringify-object": "catalog:",
+    "astro-eslint-parser": "catalog:",
+    "bumpp": "catalog:",
+    "cross-env": "catalog:",
+    "eslint": "catalog:",
+    "eslint-plugin-astro": "catalog:",
+    "eslint-plugin-format": "catalog:",
+    "lint-staged": "catalog:",
+    "pnpm": "catalog:",
+    "prettier-plugin-astro": "catalog:",
+    "simple-git-hooks": "catalog:",
+    "tsx": "catalog:",
+    "typescript": "catalog:",
+    "unbuild": "catalog:",
+    "vite": "catalog:",
+    "vitest": "catalog:"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
