--- a/apps/v4/package.json
+++ b/apps/v4/package.json
@@ -11,41 +11,41 @@
     "registry:build": "tsx ./scripts/build-registry.mts"
   },
   "dependencies": {
-    "@angular/animations": "^19.2.0",
-    "@angular/cdk": "^19.1.2",
-    "@angular/common": "^19.2.0",
-    "@angular/compiler": "^19.2.0",
-    "@angular/core": "^19.2.0",
-    "@angular/forms": "^19.2.0",
-    "@angular/platform-browser": "^19.2.0",
-    "@angular/platform-browser-dynamic": "^19.2.0",
-    "@angular/platform-server": "^19.2.0",
-    "@angular/router": "^19.2.0",
-    "@angular/ssr": "^19.2.7",
-    "@ng-icons/core": "^30.2.0",
-    "@ng-icons/lucide": "^30.2.0",
-    "@ng-icons/radix-icons": "^30.2.0",
-    "@radix-ng/primitives": "^0.29.0",
-    "@tailwindcss/postcss": "^4.0.4",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "express": "^4.18.2",
-    "ngx-sonner": "^3.0.0",
-    "postcss": "^8.5.1",
-    "rimraf": "^6.0.1",
-    "rxjs": "~7.8.0",
-    "tailwind-merge": "^3.0.1",
-    "tailwindcss": "^4.0.4",
-    "tailwindcss-animate": "^1.0.7",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "@angular/animations": "catalog:",
+    "@angular/cdk": "catalog:",
+    "@angular/common": "catalog:",
+    "@angular/compiler": "catalog:",
+    "@angular/core": "catalog:",
+    "@angular/forms": "catalog:",
+    "@angular/platform-browser": "catalog:",
+    "@angular/platform-browser-dynamic": "catalog:",
+    "@angular/platform-server": "catalog:",
+    "@angular/router": "catalog:",
+    "@angular/ssr": "catalog:",
+    "@ng-icons/core": "catalog:",
+    "@ng-icons/lucide": "catalog:",
+    "@ng-icons/radix-icons": "catalog:",
+    "@radix-ng/primitives": "catalog:",
+    "@tailwindcss/postcss": "catalog:",
+    "class-variance-authority": "catalog:",
+    "clsx": "catalog:",
+    "express": "catalog:",
+    "ngx-sonner": "catalog:",
+    "postcss": "catalog:",
+    "rimraf": "catalog:",
+    "rxjs": "catalog:",
+    "tailwind-merge": "catalog:",
+    "tailwindcss": "catalog:",
+    "tailwindcss-animate": "catalog:",
+    "tslib": "catalog:",
+    "zone.js": "catalog:"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.1.6",
-    "@angular/cli": "^19.2.7",
-    "@angular/compiler-cli": "^19.2.0",
-    "@types/express": "^4.17.17",
-    "@types/node": "^18.18.0",
-    "typescript": "~5.7.2"
+    "@angular-devkit/build-angular": "catalog:",
+    "@angular/cli": "catalog:",
+    "@angular/compiler-cli": "catalog:",
+    "@types/express": "catalog:",
+    "@types/node": "catalog:",
+    "typescript": "catalog:"
   }
 }
