--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -42,8 +42,8 @@ catalog:
   '@types/alpinejs': ^3.13.11
   '@types/alpinejs__focus': ^3.13.4
   '@types/diff': ^7.0.1
+  '@types/ejs': ^3.1.5
   '@types/express': ^4.17.17
-  '@types/lodash.template': ^4.5.3
   '@types/node': ^22.10.6
   '@types/stringify-object': ^4.0.5
   '@valibot/to-json-schema': 1.0.0-beta.5
@@ -57,6 +57,7 @@ catalog:
   cross-env: ^7.0.3
   deepmerge: ^4.3.1
   diff: ^7.0.0
+  ejs: ^3.1.10
   eslint: ^9.22.0
   eslint-plugin-astro: ^1.3.1
   eslint-plugin-format: ^1.0.1
@@ -65,7 +66,6 @@ catalog:
   https-proxy-agent: ^7.0.6
   lint-staged: ^15.3.0
   local-pkg: ^1.0.0
-  lodash.template: ^4.5.0
   mdast-util-toc: ^7.1.0
   ngx-sonner: ^3.0.0
   node-fetch: ^3.3.2
