--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,108 +1,49 @@
 packages:
   - playground
-  - apps/*
+  - docs
   - packages/*
   - examples/*
 catalog:
-  '@alpinejs/focus': ^3.14.8
-  '@analogjs/astro-angular': ^1.15.1
-  '@angular-devkit/build-angular': ^19.2.7
-  '@angular/animations': ^19.2.6
-  '@angular/cdk': ^19.2.6
-  '@angular/cli': ^19.1.5
-  '@angular/common': ^19.2.6
-  '@angular/compiler': ^19.2.6
-  '@angular/compiler-cli': ^19.2.6
-  '@angular/core': ^19.2.6
-  '@angular/forms': ^19.2.6
-  '@angular/language-service': ^19.2.6
-  '@angular/platform-browser': ^19.2.6
-  '@angular/platform-browser-dynamic': ^19.2.6
-  '@angular/platform-server': ^19.2.6
-  '@angular/router': ^19.2.0
-  '@angular/ssr': ^19.2.7
-  '@antfu/eslint-config': ^4.12.0
-  '@antfu/install-pkg': ^1.0.0
-  '@antfu/ni': ^23.3.1
-  '@astrojs/alpinejs': ^0.4.5
-  '@astrojs/check': ^0.9.4
-  '@astrojs/mdx': ^4.2.3
-  '@astrojs/sitemap': ^3.3.0
-  '@astrojs/tailwind': ^6.0.2
-  '@astrojs/ts-plugin': ^1.10.4
-  '@clack/prompts': ^0.9.1
-  '@fontsource-variable/geist': ^5.2.5
-  '@fontsource-variable/geist-mono': ^5.2.5
-  '@ng-icons/core': ^30.2.0
-  '@ng-icons/lucide': ^30.2.0
-  '@ng-icons/radix-icons': ^30.2.0
-  '@radix-ng/primitives': ^0.33.0
-  '@shikijs/transformers': ^2.2.0
-  '@tailwindcss/postcss': ^4.0.4
-  '@types/alpinejs': ^3.13.11
-  '@types/alpinejs__focus': ^3.13.4
-  '@types/diff': ^7.0.1
-  '@types/ejs': ^3.1.5
-  '@types/express': ^4.17.17
-  '@types/node': ^22.10.6
-  '@types/stringify-object': ^4.0.5
-  '@valibot/to-json-schema': 1.0.0-beta.5
-  alpinejs: ^3.14.8
-  astro: ^5.6.1
-  astro-eslint-parser: ^1.2.2
-  bumpp: ^10.0.3
-  class-variance-authority: ^0.7.1
-  clsx: ^2.1.1
-  commander: ^13.1.0
-  cross-env: ^7.0.3
-  deepmerge: ^4.3.1
-  diff: ^7.0.0
-  ejs: ^3.1.10
-  eslint: ^9.22.0
-  eslint-plugin-astro: ^1.3.1
-  eslint-plugin-format: ^1.0.1
-  express: ^4.18.2
-  fast-glob: ^3.3.3
-  https-proxy-agent: ^7.0.6
-  lint-staged: ^15.3.0
-  local-pkg: ^1.0.0
-  mdast-util-toc: ^7.1.0
-  ngx-sonner: ^3.0.0
-  node-fetch: ^3.3.2
-  package-manager-detector: ^0.2.9
-  picocolors: ^1.1.1
-  pnpm: ^9.15.4
-  postcss: ^8.5.1
-  prettier-plugin-astro: ^0.14.1
-  rehype-autolink-headings: ^7.1.0
-  rehype-pretty-code: ^0.14.1
-  rehype-slug: ^6.0.0
-  remark: ^15.0.1
-  remark-code-import: ^1.2.0
-  rimraf: ^6.0.1
-  rxjs: ^7.8.2
-  shiki: ^2.3.2
-  simple-git-hooks: ^2.11.1
-  stringify-object: ^5.0.0
-  tailwind-merge: ^3.0.1
-  # eslint-disable-next-line pnpm/yaml-no-duplicate-catalog-item
-  tailwindcss: ^4.0.3
-  tailwindcss-animate: ^1.0.7
-  tinyexec: ^0.3.2
-  ts-morph: ^25.0.0
-  tsconfck: ^3.1.4
-  tsconfig-paths: ^4.2.0
-  tslib: ^2.8.1
-  tsx: ^4.19.2
-  typescript: ^5.7.3
-  unbuild: ^3.3.1
-  unconfig: ^0.6.1
-  unist-builder: 3.0.0
-  unist-util-visit: ^5.0.0
-  valibot: 1.0.0
-  vite: ^6.0.7
-  vitest: ^2.1.8
-  zone.js: ~0.15.0
+  '@antfu/nip': ^0.1.0
 catalogs:
-  conflicts_tailwindcss_h3_4_14:
-    tailwindcss: ^3.4.14
+  cli:
+    '@antfu/eslint-config': ^4.10.1
+    '@antfu/ni': ^24.1.0
+    bumpp: ^10.1.0
+    commander: ^14.0.0
+    eslint: ^9.22.0
+    lint-staged: ^15.5.0
+    simple-git-hooks: ^2.11.1
+    tsdown: ^0.12.4
+    tsx: ^4.19.3
+    typescript: ^5.8.2
+    vite: ^6.2.1
+  inlined:
+    '@antfu/utils': ^9.1.0
+  testing:
+    vitest: ^3.0.8
+    vitest-package-exports: ^0.1.1
+    yaml: ^2.7.0
+  types:
+    '@types/fs-extra': ^11.0.4
+    '@types/node': ^22.13.10
+    '@types/stringify-object': ^4.0.5
+  utils:
+    cosmiconfig: ^9.0.0
+    deepmerge: ^4.3.1
+    fast-glob: ^3.3.3
+    fs-extra: ^11.3.0
+    https-proxy-agent: ^7.0.6
+    kleur: ^4.1.5
+    node-fetch: ^3.3.2
+    ora: ^8.2.0
+    stringify-object: ^5.0.0
+    tailwindcss: ^4.1.10
+    tinyexec: ^0.3.2
+    ts-morph: ^26.0.0
+    tsconfig-paths: ^4.2.0
+    type-fest: ^4.41.0
+    zod: ^3.25.64
+onlyBuiltDependencies:
+  - esbuild
+  - simple-git-hooks
