feat: add init command

--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "kleur": "catalog:utils",
     "node-fetch": "catalog:utils",
     "ora": "catalog:utils",
+    "postcss": "catalog:cli",
+    "prompts": "catalog:cli",
     "stringify-object": "catalog:utils",
     "tailwindcss": "catalog:utils",
     "ts-morph": "catalog:utils",
@@ -68,10 +70,10 @@
   "devDependencies": {
     "@antfu/eslint-config": "catalog:cli",
     "@antfu/ni": "catalog:cli",
-    "@antfu/nip": "catalog:",
     "@antfu/utils": "catalog:inlined",
     "@types/fs-extra": "catalog:types",
     "@types/node": "catalog:types",
+    "@types/prompts": "catalog:types",
     "@types/stringify-object": "catalog:types",
     "bumpp": "catalog:cli",
     "eslint": "catalog:cli",
