--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,8 +3,6 @@ packages:
   - docs
   - packages/*
   - examples/*
-catalog:
-  '@antfu/nip': ^0.1.0
 catalogs:
   cli:
     '@antfu/eslint-config': ^4.10.1
@@ -13,6 +11,8 @@ catalogs:
     commander: ^14.0.0
     eslint: ^9.22.0
     lint-staged: ^15.5.0
+    postcss: ^8.5.5
+    prompts: ^2.4.2
     simple-git-hooks: ^2.11.1
     tsdown: ^0.12.4
     tsx: ^4.19.3
@@ -27,6 +27,7 @@ catalogs:
   types:
     '@types/fs-extra': ^11.0.4
     '@types/node': ^22.13.10
+    '@types/prompts': ^2.4.9
     '@types/stringify-object': ^4.0.5
   utils:
     cosmiconfig: ^9.0.0
