--- a/package.json
+++ b/package.json
@@ -78,9 +78,11 @@
     "@types/prompts": "catalog:types",
     "@types/stringify-object": "catalog:types",
     "bumpp": "catalog:cli",
+    "clsx": "catalog:utils",
     "eslint": "catalog:cli",
     "lint-staged": "catalog:cli",
     "simple-git-hooks": "catalog:cli",
+    "tailwind-merge": "catalog:utils",
     "tinyexec": "catalog:utils",
     "tsdown": "catalog:cli",
     "tsx": "catalog:cli",
