--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -30,13 +30,17 @@ catalogs:
     '@angular/platform-browser': ^20.0.3
     '@angular/platform-browser-dynamic': ^20.0.3
     '@angular/platform-server': ^20.0.3
-    '@astrojs/starlight': ^0.34.4
-    '@astrojs/starlight-tailwind': ^4.0.1
+    '@astrojs/mdx': ^4.3.0
+    '@iconify/json': ^2.2.351
     '@tailwindcss/vite': ^4.0.7
     astro: ^5.6.1
+    astro-seo-plugin: ^1.3.5
+    rehype-pretty-code: ^0.14.1
     rxjs: ^7.8.2
     sharp: ^0.32.5
+    shiki: ^3.6.0
     tslib: ^2.8.1
+    unplugin-icons: ^22.1.0
     zone.js: ^0.15.1
   inlined:
     '@antfu/utils': ^9.1.0
