docs: add sink page

--- a/docs/package.json
+++ b/docs/package.json
@@ -14,15 +14,20 @@
     "@analogjs/astro-angular": "catalog:front",
     "@angular-devkit/build-angular": "catalog:front",
     "@angular/animations": "catalog:front",
+    "@angular/cdk": "catalog:front",
     "@angular/common": "catalog:front",
     "@angular/compiler": "catalog:front",
     "@angular/compiler-cli": "catalog:front",
     "@angular/core": "catalog:front",
+    "@angular/forms": "catalog:front",
     "@angular/language-service": "catalog:front",
     "@angular/platform-browser": "catalog:front",
     "@angular/platform-browser-dynamic": "catalog:front",
     "@angular/platform-server": "catalog:front",
     "@astrojs/mdx": "catalog:front",
+    "@internationalized/date": "catalog:front",
+    "@ngxi/lucide": "catalog:front",
+    "@radix-ng/primitives": "catalog:front",
     "@tailwindcss/vite": "catalog:front",
     "astro": "catalog:front",
     "astro-seo-plugin": "catalog:front",
