--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -20,5 +20,12 @@
   ],
   "exclude": [
     "dist"
-  ]
+  ],
+  "angularCompilerOptions": {
+    "enableI18nLegacyMessageIdFormat": false,
+    "strictInjectionParameters": true,
+    "strictInputAccessModifiers": true,
+    "strictTemplates": true,
+    "allowJs": false
+  }
 }
