--- a/package.json
+++ b/package.json
@@ -77,11 +77,15 @@
     "@types/node": "catalog:types",
     "@types/prompts": "catalog:types",
     "@types/stringify-object": "catalog:types",
+    "astro-eslint-parser": "catalog:cli",
     "bumpp": "catalog:cli",
     "class-variance-authority": "catalog:utils",
     "clsx": "catalog:utils",
     "eslint": "catalog:cli",
+    "eslint-plugin-astro": "catalog:cli",
+    "eslint-plugin-format": "catalog:cli",
     "lint-staged": "catalog:cli",
+    "prettier-plugin-astro": "catalog:cli",
     "simple-git-hooks": "catalog:cli",
     "tailwind-merge": "catalog:utils",
     "tinyexec": "catalog:utils",
