--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,13 +5,17 @@ packages:
   - examples/*
 catalogs:
   cli:
-    '@antfu/eslint-config': ^4.10.1
+    '@antfu/eslint-config': ^4.15.0
     '@antfu/ni': ^24.1.0
+    astro-eslint-parser: ^1.2.2
     bumpp: ^10.1.0
     commander: ^14.0.0
     eslint: ^9.22.0
+    eslint-plugin-astro: ^1.3.1
+    eslint-plugin-format: ^1.0.1
     lint-staged: ^15.5.0
     postcss: ^8.5.5
+    prettier-plugin-astro: ^0.14.1
     prompts: ^2.4.2
     simple-git-hooks: ^2.11.1
     tsdown: ^0.12.4
@@ -22,16 +26,21 @@ catalogs:
     '@analogjs/astro-angular': ^1.17.1
     '@angular-devkit/build-angular': ^20.0.2
     '@angular/animations': ^20.0.3
+    '@angular/cdk': ^20.0.3
     '@angular/common': ^20.0.3
     '@angular/compiler': ^20.0.3
     '@angular/compiler-cli': ^20.0.3
     '@angular/core': ^20.0.3
+    '@angular/forms': ^20.0.3
     '@angular/language-service': ^20.0.3
     '@angular/platform-browser': ^20.0.3
     '@angular/platform-browser-dynamic': ^20.0.3
     '@angular/platform-server': ^20.0.3
     '@astrojs/mdx': ^4.3.0
     '@iconify/json': ^2.2.351
+    '@internationalized/date': ^3.8.2
+    '@ngxi/lucide': ^0.11.23
+    '@radix-ng/primitives': ^0.39.4
     '@tailwindcss/vite': ^4.0.7
     astro: ^5.6.1
     astro-seo-plugin: ^1.3.5
