--- a/docs/package.json
+++ b/docs/package.json
@@ -11,31 +11,32 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@analogjs/astro-angular": "catalog:front",
-    "@angular-devkit/build-angular": "catalog:front",
-    "@angular/animations": "catalog:front",
+    "@analogjs/astro-angular": "^1.19.0",
+    "@angular-devkit/build-angular": "^20.0.5",
+    "@angular/animations": "^20.0.6",
     "@angular/cdk": "catalog:front",
-    "@angular/common": "catalog:front",
-    "@angular/compiler": "catalog:front",
-    "@angular/compiler-cli": "catalog:front",
-    "@angular/core": "catalog:front",
-    "@angular/forms": "catalog:front",
-    "@angular/language-service": "catalog:front",
-    "@angular/platform-browser": "catalog:front",
-    "@angular/platform-browser-dynamic": "catalog:front",
-    "@angular/platform-server": "catalog:front",
+    "@angular/common": "^20.0.6",
+    "@angular/compiler": "^20.0.6",
+    "@angular/compiler-cli": "^20.0.6",
+    "@angular/core": "^20.0.6",
+    "@angular/forms": "^20.0.6",
+    "@angular/language-service": "^20.0.6",
+    "@angular/platform-browser": "^20.0.6",
+    "@angular/platform-browser-dynamic": "^20.0.6",
+    "@angular/platform-server": "^20.0.6",
     "@astrojs/mdx": "catalog:front",
     "@internationalized/date": "catalog:front",
-    "@ngxi/lucide": "catalog:front",
+    "@ngxi/lucide": "0.12.1",
+    "@ngxpert/input-otp": "^1.0.3",
     "@radix-ng/primitives": "catalog:front",
     "@tailwindcss/vite": "catalog:front",
     "astro": "catalog:front",
     "astro-seo-plugin": "catalog:front",
-    "rxjs": "catalog:front",
+    "rxjs": "^7.8.2",
     "sharp": "catalog:front",
     "tailwindcss": "catalog:utils",
-    "tslib": "catalog:front",
-    "zone.js": "catalog:front"
+    "tslib": "^2.8.1",
+    "zone.js": "^0.15.1"
   },
   "devDependencies": {
     "@iconify/json": "catalog:front",
