chore: ignore docs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,8 @@
     "verbatimModuleSyntax": true,
     "skipDefaultLibCheck": true,
     "skipLibCheck": true
-  }
+  },
+  "exclude": [
+    "docs/**/*"
+  ]
 }
