--- a/docs/package.json
+++ b/docs/package.json
@@ -11,19 +11,19 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@analogjs/astro-angular": "^1.19.0",
-    "@angular-devkit/build-angular": "^20.0.5",
-    "@angular/animations": "^20.0.6",
+    "@analogjs/astro-angular": "catalog:front",
+    "@angular-devkit/build-angular": "catalog:front",
+    "@angular/animations": "catalog:front",
     "@angular/cdk": "catalog:front",
-    "@angular/common": "^20.0.6",
-    "@angular/compiler": "^20.0.6",
-    "@angular/compiler-cli": "^20.0.6",
-    "@angular/core": "^20.0.6",
-    "@angular/forms": "^20.0.6",
-    "@angular/language-service": "^20.0.6",
-    "@angular/platform-browser": "^20.0.6",
-    "@angular/platform-browser-dynamic": "^20.0.6",
-    "@angular/platform-server": "^20.0.6",
+    "@angular/common": "catalog:front",
+    "@angular/compiler": "catalog:front",
+    "@angular/compiler-cli": "catalog:front",
+    "@angular/core": "catalog:front",
+    "@angular/forms": "catalog:front",
+    "@angular/language-service": "catalog:front",
+    "@angular/platform-browser": "catalog:front",
+    "@angular/platform-browser-dynamic": "catalog:front",
+    "@angular/platform-server": "catalog:front",
     "@astrojs/mdx": "catalog:front",
     "@internationalized/date": "catalog:front",
     "@ngxi/lucide": "0.12.1",
@@ -36,8 +36,8 @@
     "shadcn-ng": "workspace:*",
     "sharp": "catalog:front",
     "tailwindcss": "catalog:utils",
-    "tslib": "^2.8.1",
-    "zone.js": "^0.15.1"
+    "tslib": "catalog:front",
+    "zone.js": "catalog:front"
   },
   "devDependencies": {
     "@iconify/json": "catalog:front",
