--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-format": "^1.0.1",
     "lint-staged": "16.1.5",
     "simple-git-hooks": "2.13.1",
+    "tailwindcss": "4.1.12",
     "tsdown": "0.14.1",
     "tsx": "4.20.4",
     "typescript": "5.9.2",
