--- a/packages/shadcn-ng/package.json
+++ b/packages/shadcn-ng/package.json
@@ -45,6 +45,7 @@
     "cosmiconfig": "9.0.0",
     "dedent": "1.6.0",
     "deepmerge": "4.3.1",
+    "execa": "9.6.0",
     "fast-glob": "3.3.3",
     "fs-extra": "11.3.1",
     "fuzzysort": "3.1.0",
@@ -52,6 +53,7 @@
     "kleur": "4.1.5",
     "node-fetch": "3.3.2",
     "ora": "8.2.0",
+    "postcss": "8.5.6",
     "prompts": "2.4.2",
     "stringify-object": "5.0.0",
     "ts-morph": "26.0.0",
