--- a/packages/shadcn-ng/package.json
+++ b/packages/shadcn-ng/package.json
@@ -45,6 +45,7 @@
     "cosmiconfig": "9.0.0",
     "dedent": "1.6.0",
     "deepmerge": "4.3.1",
+    "diff": "8.0.2",
     "execa": "9.6.0",
     "fast-glob": "3.3.3",
     "fs-extra": "11.3.1",
