feat(www): add registry scripts

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -2,11 +2,14 @@
   "name": "www",
   "type": "module",
   "version": "0.0.1",
+  "private": true,
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "registry:build": "tsx --tsconfig ./tsconfig.scripts.json ./scripts/build-registry.mts",
+    "registry:capture": "tsx --tsconfig ./tsconfig.scripts.json ./scripts/capture-registry.mts"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.4",
@@ -19,5 +22,11 @@
     "tailwindcss": "^4.1.12",
     "tw-animate-css": "^1.3.7",
     "unplugin-icons": "^22.2.0"
+  },
+  "devDependencies": {
+    "puppeteer": "^24.17.0",
+    "rimraf": "^6.0.1",
+    "shadcn-ng": "workspace:*",
+    "zod": "^4.0.17"
   }
 }
