--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -12,16 +12,30 @@
     "registry:capture": "tsx --tsconfig ./tsconfig.scripts.json ./scripts/capture-registry.mts"
   },
   "dependencies": {
+    "@analogjs/astro-angular": "^1.20.0",
+    "@angular-devkit/build-angular": "^20.2.0",
+    "@angular/animations": "^20.2.1",
+    "@angular/common": "^20.2.1",
+    "@angular/compiler": "^20.2.1",
+    "@angular/compiler-cli": "^20.2.1",
+    "@angular/core": "^20.2.1",
+    "@angular/language-service": "^20.2.1",
+    "@angular/platform-browser": "^20.2.1",
+    "@angular/platform-browser-dynamic": "^20.2.1",
+    "@angular/platform-server": "^20.2.1",
     "@astrojs/mdx": "^4.3.4",
     "@iconify/json": "^2.2.376",
     "@tailwindcss/vite": "^4.1.12",
     "astro": "^5.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "rxjs": "^7.8.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
+    "tslib": "^2.8.1",
     "tw-animate-css": "^1.3.7",
-    "unplugin-icons": "^22.2.0"
+    "unplugin-icons": "^22.2.0",
+    "zone.js": "^0.15.1"
   },
   "devDependencies": {
     "puppeteer": "^24.17.0",
