feat(www): config shiki

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -29,7 +29,9 @@
     "astro": "^5.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "rehype-pretty-code": "^0.14.1",
     "rxjs": "^7.8.2",
+    "shiki": "^3.11.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
     "tslib": "^2.8.1",
