feat(www): add tabs into mdx-components

--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -13,6 +13,13 @@
       "unplugin-icons/types/astro"
     ]
   },
+  "angularCompilerOptions": {
+    "enableI18nLegacyMessageIdFormat": false,
+    "strictInjectionParameters": true,
+    "strictInputAccessModifiers": true,
+    "strictTemplates": true,
+    "allowJs": false
+  },
   "include": [".astro/types.d.ts", "**/*"],
   "exclude": ["dist"]
 }
