--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -15,6 +15,7 @@
     "@analogjs/astro-angular": "^1.20.0",
     "@angular-devkit/build-angular": "^20.2.0",
     "@angular/animations": "^20.2.1",
+    "@angular/cdk": "^20.2.0",
     "@angular/common": "^20.2.1",
     "@angular/compiler": "^20.2.1",
     "@angular/compiler-cli": "^20.2.1",
@@ -25,6 +26,9 @@
     "@angular/platform-server": "^20.2.1",
     "@astrojs/mdx": "^4.3.4",
     "@iconify/json": "^2.2.376",
+    "@internationalized/date": "^3.8.2",
+    "@ngxi/lucide": "^0.12.17",
+    "@radix-ng/primitives": "^0.43.0",
     "@tailwindcss/vite": "^4.1.12",
     "astro": "^5.13.2",
     "class-variance-authority": "^0.7.1",
