chore: update deps

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -12,25 +12,25 @@
     "registry:capture": "tsx --tsconfig ./tsconfig.scripts.json ./scripts/capture-registry.mts"
   },
   "dependencies": {
-    "@analogjs/astro-angular": "^1.20.0",
-    "@angular-devkit/build-angular": "^20.2.0",
-    "@angular/animations": "^20.2.1",
+    "@analogjs/astro-angular": "^1.20.1",
+    "@angular-devkit/build-angular": "^20.2.1",
+    "@angular/animations": "^20.2.3",
     "@angular/cdk": "^20.2.0",
-    "@angular/common": "^20.2.1",
-    "@angular/compiler": "^20.2.1",
-    "@angular/compiler-cli": "^20.2.1",
-    "@angular/core": "^20.2.1",
-    "@angular/language-service": "^20.2.1",
-    "@angular/platform-browser": "^20.2.1",
-    "@angular/platform-browser-dynamic": "^20.2.1",
-    "@angular/platform-server": "^20.2.1",
+    "@angular/common": "^20.2.3",
+    "@angular/compiler": "^20.2.3",
+    "@angular/compiler-cli": "^20.2.3",
+    "@angular/core": "^20.2.3",
+    "@angular/language-service": "^20.2.3",
+    "@angular/platform-browser": "^20.2.3",
+    "@angular/platform-browser-dynamic": "^20.2.3",
+    "@angular/platform-server": "^20.2.3",
     "@astrojs/mdx": "^4.3.4",
     "@iconify/json": "^2.2.376",
     "@internationalized/date": "^3.8.2",
-    "@ngxi/lucide": "^0.12.17",
+    "@ngxi/lucide": "0.12.21",
     "@radix-ng/primitives": "^0.43.0",
     "@tailwindcss/vite": "^4.1.12",
-    "astro": "^5.13.2",
+    "astro": "^5.13.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "rehype-pretty-code": "^0.14.1",
