--- a/packages/shadcn-ng/package.json
+++ b/packages/shadcn-ng/package.json
@@ -75,7 +75,7 @@
     "stringify-object": "5.0.0",
     "ts-morph": "26.0.0",
     "tsconfig-paths": "4.2.0",
-    "zod": "4.0.17"
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
