--- a/apps/v4/package.json
+++ b/apps/v4/package.json
@@ -25,6 +25,7 @@
     "@astrojs/starlight": "^0.35.2",
     "@astrojs/starlight-markdoc": "^0.5.0",
     "@astrojs/starlight-tailwind": "^4.0.1",
+    "@pagefind/default-ui": "^1.3.0",
     "@tailwindcss/vite": "^4.0.7",
     "astro": "^5.6.1",
     "fast-glob": "3.3.3",
@@ -38,6 +39,7 @@
     "@angular/cdk": "^19.2.19",
     "@ngxi/lucide": "^0.12.21",
     "@radix-ng/primitives": "^0.33.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "rimraf": "^6.0.1",
     "tailwind-merge": "^3.3.1",
