--- a/apps/v4/package.json
+++ b/apps/v4/package.json
@@ -25,6 +25,7 @@
     "@astrojs/starlight": "^0.35.2",
     "@astrojs/starlight-markdoc": "^0.5.0",
     "@astrojs/starlight-tailwind": "^4.0.1",
+    "@iconify/json": "^2.2.379",
     "@pagefind/default-ui": "^1.3.0",
     "@tailwindcss/vite": "^4.0.7",
     "astro": "^5.6.1",
@@ -33,6 +34,7 @@
     "sharp": "^0.34.2",
     "tailwindcss": "^4.0.7",
     "tslib": "^2.8.1",
+    "unplugin-icons": "^22.2.0",
     "zone.js": "^0.15.1"
   },
   "devDependencies": {
